# datafactory

./: README.md  pyproject.toml  rdf.py
datafactory/: core.py  hist.py  plot.py  rdf.py  statistic.py  style.mplstyle
datafactory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test.ipynb
