[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datafactory"
version = "0.1.0"
authors = [
  { name="Eugene Carter", email="xxxx@outlook.com" },
]
description = "A small example package"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "hepunits>=2.3.6",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas==2.2.2",
    "scipy>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/Cyz-97/datafactory"
Issues = "https://github.com/Cyz-97/datafactory/issues"